Sync testsuite with trunk

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/BoolAndGreaterOrEqualThan.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/BoolAndGreaterOrEqualThan.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldstr "A"
@@ -9,7 +9,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_000d: ldarg.0
 		IL_000e: callvirt System.Int32 System.String::get_Length()
@@ -23,7 +23,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_001b: ldc.i4.0
 	successors:
@@ -31,7 +31,7 @@ block 2:
   predecessors:
     block 0
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_001c: stloc.0
 		IL_001d: br.s IL_001f
@@ -41,7 +41,7 @@ block 3:
     block 1
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_001f: ldloc.0
 		IL_0020: ret
