--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/BoolOrLessOrEqualThan.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/BoolOrLessOrEqualThan.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.s 42
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0005: ldarg.0
 		IL_0006: ldc.i4.s 10
@@ -21,7 +21,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_000f: ldc.i4.1
 	successors:
@@ -29,7 +29,7 @@ block 2:
   predecessors:
     block 0
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_0010: stloc.0
 		IL_0011: br.s IL_0013
@@ -39,7 +39,7 @@ block 3:
     block 1
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_0013: ldloc.0
 		IL_0014: ret
