--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/FlowTest.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/FlowTest.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldc.i4.1
 		IL_0001: stloc.0
@@ -7,7 +7,7 @@ block 0:
 	successors:
 		block 5
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldloc.0
 		IL_0005: ldc.i4.2
@@ -19,7 +19,7 @@ block 1:
   predecessors:
     block 5
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0009: ldstr "Even number"
 		IL_000e: call System.Void System.Console::WriteLine(System.String)
@@ -30,7 +30,7 @@ block 2:
   predecessors:
     block 1
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_0015: ldstr "!"
 		IL_001a: call System.Void System.Console::WriteLine(System.String)
@@ -48,7 +48,7 @@ block 3:
     block 2
     block 3
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_0027: ldloc.0
 		IL_0028: ldc.i4.1
@@ -60,7 +60,7 @@ block 4:
     block 1
     block 3
 block 5:
-  kind: full
+  kind: structure
 	body:
 		IL_002b: ldloc.0
 		IL_002c: ldc.i4.5
@@ -72,7 +72,7 @@ block 5:
     block 0
     block 4
 block 6:
-  kind: full
+  kind: structure
 	body:
 		IL_002f: ret
   predecessors:
