--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/InfiniteLoopBranchToSelf.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/InfiniteLoopBranchToSelf.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: br.s IL_0000
 	successors:
@@ -7,7 +7,7 @@ block 0:
   predecessors:
     block 0
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0002: ldc.i4.1
 		IL_0003: ret
