--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleOr.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.3
@@ -8,7 +8,7 @@ block 0:
 		block 4
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.5
@@ -19,7 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0008: ldarg.0
 		IL_0009: ldc.i4.s 42
@@ -30,7 +30,7 @@ block 2:
   predecessors:
     block 1
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_000d: ldarg.0
 		IL_000e: ldc.i4.s 100
@@ -41,7 +41,7 @@ block 3:
   predecessors:
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_0014: ldc.i4.1
 	successors:
@@ -51,7 +51,7 @@ block 4:
     block 1
     block 2
 block 5:
-  kind: full
+  kind: structure
 	body:
 		IL_0015: stloc.0
 		IL_0016: br.s IL_0018
@@ -61,7 +61,7 @@ block 5:
     block 3
     block 4
 block 6:
-  kind: full
+  kind: structure
 	body:
 		IL_0018: ldloc.0
 		IL_0019: ret
