--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedOrGreaterThan.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedOrGreaterThan.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.5
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.s 2
@@ -19,7 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0009: ldarg.0
 		IL_000a: ldc.i4.s 10
@@ -31,7 +31,7 @@ block 2:
     block 0
     block 1
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_0010: ldc.i4.0
 	successors:
@@ -39,7 +39,7 @@ block 3:
   predecessors:
     block 1
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_0011: stloc.0
 		IL_0012: br.s IL_0014
@@ -49,7 +49,7 @@ block 4:
     block 2
     block 3
 block 5:
-  kind: full
+  kind: structure
 	body:
 		IL_0014: ldloc.0
 		IL_0015: ret
