--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedTryCatchException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedTryCatchException.il.cfg
@@ -1,12 +1,31 @@
 block 0:
+  kind: structure
   body:
-    IL_0000: ldc.i4.4
-    IL_0001: stloc.0
-    IL_0002: ldc.i4.0
-    IL_0003: stloc.1
-    IL_0004: ldc.i4.2
-    IL_0005: newarr System.Int32
-    IL_000a: stloc.2
+    IL_0042: ldstr "I am a WriteLine method"
+    IL_0047: call System.Void System.Console::WriteLine(System.String)
+    IL_004c: ret
+block 1:
+  kind: seh
+  body:
+    IL_001f: ldloc.2
+    IL_0020: ldc.i4.4
+    IL_0021: ldelem.i4
+    IL_0022: call System.Void System.Console::WriteLine(System.Int32)
+    IL_0027: leave IL_003d
+  successors:
+    block 2
+block 2:
+  kind: seh
+  body:
+    IL_002c: stloc.s V_4
+    IL_002e: ldstr "IndexOutOfRangeException detected"
+    IL_0033: call System.Void System.Console::WriteLine(System.String)
+    IL_0038: leave IL_003d
+  predecessors:
+    block 1
+block 3:
+  kind: seh
+  body:
     IL_000b: ldloc.0
     IL_000c: ldloc.1
     IL_000d: div
@@ -14,7 +33,8 @@ block 0:
     IL_000f: leave IL_0042
   successors:
     block 4
-block 1:
+block 4:
+  kind: seh
   body:
     IL_0014: stloc.3
     IL_0015: ldstr "DivideByZeroException detected."
@@ -24,29 +44,10 @@ block 1:
     IL_0021: ldelem.i4
     IL_0022: call System.Void System.Console::WriteLine(System.Int32)
     IL_0027: leave IL_003d
-  successors:
-    block 3
-block 2:
-  body:
     IL_002c: stloc.s V_4
     IL_002e: ldstr "IndexOutOfRangeException detected"
     IL_0033: call System.Void System.Console::WriteLine(System.String)
     IL_0038: leave IL_003d
-  successors:
-    block 3
-block 3:
-  body:
     IL_003d: leave IL_0042
-  successors:
-    block 4
   predecessors:
-    block 1
-    block 2
-block 4:
-  body:
-    IL_0042: ldstr "I am a WriteLine method"
-    IL_0047: call System.Void System.Console::WriteLine(System.String)
-    IL_004c: ret
-  predecessors:
-    block 0
     block 3
