--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/OptimizedOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/OptimizedOr.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldstr "foo"
@@ -9,7 +9,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_000d: ldarg.0
 		IL_000e: ldstr "bar"
@@ -18,7 +18,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0019: ldc.i4.1
 		IL_001a: ret
