--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/PropertyPredicate.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/PropertyPredicate.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.1
 		IL_0001: callvirt System.String Cat::get_Name()
@@ -10,7 +10,7 @@ block 0:
 	successors:
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0013: ldloc.0
 		IL_0014: ret
