--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldarg.1
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldstr "x > y"
 		IL_0009: call System.Void System.Console::WriteLine(System.String)
@@ -17,7 +17,7 @@ block 1:
 	predecessors:
 		block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_000e: ret
 	predecessors:
