--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringPredicate.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringPredicate.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldstr "foo"
@@ -9,7 +9,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_000d: ldarg.0
 		IL_000e: ldstr "bar"
@@ -20,7 +20,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_001a: ldc.i4.1
 	successors:
@@ -28,7 +28,7 @@ block 2:
   predecessors:
     block 0
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_001b: stloc.0
 		IL_001c: br.s IL_001e
@@ -38,7 +38,7 @@ block 3:
     block 1
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_001e: ldloc.0
 		IL_001f: ret
