--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/ThreeReturns.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/ThreeReturns.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldarg.1
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldc.i4.1
 		IL_0005: stloc.0
@@ -18,7 +18,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0008: ldarg.0
 		IL_0009: ldarg.1
@@ -29,7 +29,7 @@ block 2:
   predecessors:
     block 0
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_000c: ldc.i4.1
 		IL_000d: stloc.0
@@ -39,7 +39,7 @@ block 3:
   predecessors:
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_0010: ldc.i4.0
 		IL_0011: stloc.0
@@ -49,7 +49,7 @@ block 4:
   predecessors:
     block 2
 block 5:
-  kind: full
+  kind: structure
 	body:
 		IL_0014: ldloc.0
 		IL_0015: ret
