--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/ThrowNewException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/ThrowNewException.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: structure
   body:
     IL_0000: ldc.i4.4
     IL_0001: stloc.0
@@ -10,6 +11,7 @@ block 0:
     block 2
     block 1
 block 1:
+  kind: structure
   body:
     IL_000a: ldstr "a is an even number"
     IL_000f: newobj System.Void System.Exception::.ctor(System.String)
@@ -17,6 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: structure
   body:
     IL_0015: ldc.i4.5
     IL_0016: stloc.0
@@ -31,6 +34,7 @@ block 2:
   predecessors:
     block 0
 block 3:
+  kind: structure
   body:
     IL_0020: ldstr "a is an odd number"
     IL_0025: newobj System.Void System.Exception::.ctor(System.String)
@@ -38,6 +42,7 @@ block 3:
   predecessors:
     block 2
 block 4:
+  kind: structure
   body:
     IL_002b: ret
   predecessors:
