--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionWithNops.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionWithNops.il.cfg
@@ -1,9 +1,10 @@
 block 0:
+  kind: structure
   body:
-    IL_0000: ldc.i4.4
-    IL_0001: stloc.0
-    IL_0002: ldc.i4.0
-    IL_0003: stloc.1
+    IL_001a: ret
+block 1:
+  kind: seh
+  body:
     IL_0004: ldloc.0
     IL_0005: ldloc.1
     IL_0006: div
@@ -11,23 +12,11 @@ block 0:
     IL_0008: leave IL_001a
   successors:
     block 2
-    block 3
-block 1:
-  body:
-    IL_000d: nop
-    IL_000e: nop
 block 2:
+  kind: seh
   body:
     IL_000f: ldstr "Finally..."
     IL_0014: call System.Void System.Console::WriteLine(System.String)
     IL_0019: endfinally
-  successors:
-    block 3
   predecessors:
-    block 0
-block 3:
-  body:
-    IL_001a: ret
-  predecessors:
-    block 0
-    block 2
+    block 1
