--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFaultException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFaultException.il.cfg
@@ -1,58 +1,72 @@
 block 0:
-  body:
-    IL_0000: ldstr "#jibba!!jabba"
-    IL_0005: newobj System.Void System.Uri::.ctor(System.String)
-    IL_000a: leave IL_0021
-  successors:
-    block 3
-block 1:
-  body:
-    IL_000f: ldc.i4.1
-    IL_0010: stsfld System.Int32 TestCase::exc_caught
-    IL_0015: leave IL_0021
-  successors:
-    block 3
-block 2:
-  body:
-    IL_001a: ldc.i4.1
-    IL_001b: stsfld System.Int32 TestCase::flt_caught
-    IL_0020: endfinally
-  successors:
-    block 3
-block 3:
+  kind: structure
   body:
     IL_0021: ldsfld System.Int32 TestCase::exc_caught
     IL_0026: brfalse IL_0041
   successors:
-    block 6
-    block 4
-  predecessors:
-    block 0
+    block 3
     block 1
-    block 2
-block 4:
+block 1:
+  kind: structure
   body:
     IL_002b: ldsfld System.Int32 TestCase::flt_caught
     IL_0030: brfalse IL_0041
   successors:
-    block 6
-    block 5
-  predecessors:
     block 3
-block 5:
+    block 2
+  predecessors:
+    block 0
+block 2:
+  kind: structure
   body:
     IL_0035: ldstr "PASS"
     IL_003a: call System.Void System.Console::WriteLine(System.String)
     IL_003f: ldc.i4.0
     IL_0040: ret
   predecessors:
-    block 4
-block 6:
+    block 1
+block 3:
+  kind: structure
   body:
     IL_0041: ldstr "FAIL"
     IL_0046: call System.Void System.Console::WriteLine(System.String)
     IL_004b: ldc.i4.1
     IL_004c: ret
   predecessors:
-    block 3
+    block 0
+    block 1
+block 4:
+  kind: seh
+  body:
+    IL_0000: ldstr "#jibba!!jabba"
+    IL_0005: newobj System.Void System.Uri::.ctor(System.String)
+    IL_000a: leave IL_0021
+  successors:
+    block 5
+block 5:
+  kind: seh
+  body:
+    IL_000f: ldc.i4.1
+    IL_0010: stsfld System.Int32 TestCase::exc_caught
+    IL_0015: leave IL_0021
+  predecessors:
     block 4
+block 6:
+  kind: seh
+  body:
+    IL_0000: ldstr "#jibba!!jabba"
+    IL_0005: newobj System.Void System.Uri::.ctor(System.String)
+    IL_000a: leave IL_0021
+    IL_000f: ldc.i4.1
+    IL_0010: stsfld System.Int32 TestCase::exc_caught
+    IL_0015: leave IL_0021
+  successors:
+    block 7
+block 7:
+  kind: seh
+  body:
+    IL_001a: ldc.i4.1
+    IL_001b: stsfld System.Int32 TestCase::flt_caught
+    IL_0020: endfinally
+  predecessors:
+    block 6
