--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFilterException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFilterException.il.cfg
@@ -1,4 +1,54 @@
 block 0:
+  kind: structure
+  body:
+    IL_0000: ldc.i4.0
+    IL_0001: ldc.i4.0
+    IL_0002: div
+    IL_0003: ldc.i4.1
+    IL_0004: stsfld System.Int32 TestCase::exc_not_thrown
+    IL_0009: leave IL_001d
+    IL_000e: pop
+    IL_000f: ldc.i4.1
+    IL_0010: endfilter
+block 1:
+  kind: structure
+  body:
+    IL_001d: ldsfld System.Int32 TestCase::exc_not_thrown
+    IL_0022: brtrue IL_003d
+  successors:
+    block 4
+    block 2
+block 2:
+  kind: structure
+  body:
+    IL_0027: ldsfld System.Int32 TestCase::flt_caught
+    IL_002c: brfalse IL_003d
+  successors:
+    block 4
+    block 3
+  predecessors:
+    block 1
+block 3:
+  kind: structure
+  body:
+    IL_0031: ldstr "PASS"
+    IL_0036: call System.Void System.Console::WriteLine(System.String)
+    IL_003b: ldc.i4.0
+    IL_003c: ret
+  predecessors:
+    block 2
+block 4:
+  kind: structure
+  body:
+    IL_003d: ldstr "FAIL"
+    IL_0042: call System.Void System.Console::WriteLine(System.String)
+    IL_0047: ldc.i4.1
+    IL_0048: ret
+  predecessors:
+    block 1
+    block 2
+block 5:
+  kind: seh
   body:
     IL_0000: ldc.i4.0
     IL_0001: ldc.i4.0
@@ -7,56 +57,20 @@ block 0:
     IL_0004: stsfld System.Int32 TestCase::exc_not_thrown
     IL_0009: leave IL_001d
   successors:
-    block 3
-block 1:
-  body:
-    IL_000e: pop
-    IL_000f: ldc.i4.1
-    IL_0010: endfilter
-  successors:
-    block 2
-block 2:
+    block 6
+    block 7
+block 6:
+  kind: seh
   body:
     IL_0012: ldc.i4.1
     IL_0013: stsfld System.Int32 TestCase::flt_caught
     IL_0018: leave IL_001d
-  successors:
-    block 3
   predecessors:
-    block 1
-block 3:
-  body:
-    IL_001d: ldsfld System.Int32 TestCase::exc_not_thrown
-    IL_0022: brtrue IL_003d
-  successors:
-    block 6
-    block 4
-  predecessors:
-    block 0
-    block 2
-block 4:
-  body:
-    IL_0027: ldsfld System.Int32 TestCase::flt_caught
-    IL_002c: brfalse IL_003d
-  successors:
-    block 6
     block 5
-  predecessors:
-    block 3
-block 5:
+block 7:
+  kind: seh
   body:
-    IL_0031: ldstr "PASS"
-    IL_0036: call System.Void System.Console::WriteLine(System.String)
-    IL_003b: ldc.i4.0
-    IL_003c: ret
+    IL_000e: pop
+    IL_000f: ldc.i4.1
   predecessors:
-    block 4
-block 6:
-  body:
-    IL_003d: ldstr "FAIL"
-    IL_0042: call System.Void System.Console::WriteLine(System.String)
-    IL_0047: ldc.i4.1
-    IL_0048: ret
-  predecessors:
-    block 3
-    block 4
+    block 5
