--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/FalseIf.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/FalseIf.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.0
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldstr "x > 0"
 		IL_0009: call System.Void System.Console::WriteLine(System.String)
@@ -17,7 +17,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_000e: ldarg.0
 		IL_000f: ldc.i4.0
@@ -30,7 +30,7 @@ block 2:
     block 0
     block 1
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_0015: ldloc.0
 		IL_0016: ret
