--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/InRange.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/InRange.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.5
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.8
@@ -19,7 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_000c: ldc.i4.0
 		IL_000d: ret
