--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/IsNull.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/IsNull.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldfld System.Object TestCase::_field
@@ -10,7 +10,7 @@ block 0:
 	successors:
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_000c: ldloc.0
 		IL_000d: ret
