--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleAndOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleAndOr.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.3
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.s 42
@@ -19,7 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0009: ldarg.0
 		IL_000a: ldc.i4.s 100
@@ -31,7 +31,7 @@ block 2:
     block 0
     block 1
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_000e: ldarg.0
 		IL_000f: ldc.i4.s 115
@@ -42,7 +42,7 @@ block 3:
   predecessors:
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_0015: ldc.i4.0
 	successors:
@@ -50,7 +50,7 @@ block 4:
   predecessors:
     block 2
 block 5:
-  kind: full
+  kind: structure
 	body:
 		IL_0016: br.s IL_0019
 	successors:
@@ -59,7 +59,7 @@ block 5:
     block 3
     block 4
 block 6:
-  kind: full
+  kind: structure
 	body:
 		IL_0018: ldc.i4.1
 	successors:
@@ -67,7 +67,7 @@ block 6:
   predecessors:
     block 1
 block 7:
-  kind: full
+  kind: structure
 	body:
 		IL_0019: stloc.0
 		IL_001a: br.s IL_001c
@@ -77,7 +77,7 @@ block 7:
     block 5
     block 6
 block 8:
-  kind: full
+  kind: structure
 	body:
 		IL_001c: ldloc.0
 		IL_001d: ret
