--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/OptimizedNestedOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/OptimizedNestedOr.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.5
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.2
@@ -19,7 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0008: ldarg.0
 		IL_0009: ldc.i4.s 10
@@ -29,7 +29,7 @@ block 2:
     block 0
     block 1
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_000e: ldc.i4.0
 		IL_000f: ret
