--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleCondition.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleCondition.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.s 42
@@ -9,7 +9,7 @@ block 0:
 	successors:
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0008: ldloc.0
 		IL_0009: ret
