--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleSwitch.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleSwitch.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
   body:
     IL_0000: nop
     IL_0001: ldstr "This is switch test"
@@ -19,7 +19,7 @@ block 0:
     block 4
     block 1
 block 1:
-  kind: full
+  kind: structure
   body:
     IL_0024: br.s IL_004d
   successors:
@@ -27,7 +27,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
   body:
     IL_0026: ldstr "1"
     IL_002b: call System.Void System.Console::WriteLine(System.String)
@@ -38,7 +38,7 @@ block 2:
   predecessors:
     block 0
 block 3:
-  kind: full
+  kind: structure
   body:
     IL_0033: ldstr "2"
     IL_0038: call System.Void System.Console::WriteLine(System.String)
@@ -49,7 +49,7 @@ block 3:
   predecessors:
     block 0
 block 4:
-  kind: full
+  kind: structure
   body:
     IL_0040: ldstr "3"
     IL_0045: call System.Void System.Console::WriteLine(System.String)
@@ -60,7 +60,7 @@ block 4:
   predecessors:
     block 0
 block 5:
-  kind: full
+  kind: structure
   body:
     IL_004d: ret
   predecessors:
