--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleWhile.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleWhile.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
   body:
       IL_0000: nop
       IL_0001: ldc.i4.5
@@ -8,7 +8,7 @@ block 0:
   successors:
       block 2
 block 1:
-  kind: full
+  kind: structure
   body:
     IL_0005: nop
     IL_0006: ldloca.s V_0
@@ -25,7 +25,7 @@ block 1:
   predecessors:
       block 2
 block 2:
-  kind: full
+  kind: structure
   body:
     IL_0018: ldloc.0
     IL_0019: ldc.i4.0
@@ -40,7 +40,7 @@ block 2:
     block 0
     block 1
 block 3:
-  kind: full
+  kind: structure
   body:
     IL_0020: ret
   predecessors:
