--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SingleAnd.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SingleAnd.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.3
@@ -8,7 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.s 42
@@ -19,7 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_000b: ldc.i4.0
 	successors:
@@ -27,7 +27,7 @@ block 2:
   predecessors:
     block 0
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_000c: stloc.0
 		IL_000d: br.s IL_000f
@@ -37,7 +37,7 @@ block 3:
     block 1
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_000f: ldloc.0
 		IL_0010: ret
