--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringCast.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringCast.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: nop
 		IL_0001: ldarg.0
@@ -10,7 +10,7 @@ block 0:
 	successors:
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_000f: ret
   predecessors:
