--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringTryCast.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringTryCast.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: structure
 	body:
 		IL_0000: nop
 		IL_0001: ldarg.0
@@ -9,6 +10,7 @@ block 0:
 	successors:
 		block 1
 block 1:
+  kind: structure
 	body:
 		IL_000f: ret
   predecessors:
