--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TernaryExpression.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TernaryExpression.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: full
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: brtrue.s IL_0006
@@ -7,7 +7,7 @@ block 0:
 		block 2
 		block 1
 block 1:
-  kind: full
+  kind: structure
 	body:
 		IL_0003: ldc.i4.m1
 		IL_0004: br.s IL_0008
@@ -16,7 +16,7 @@ block 1:
   predecessors:
     block 0
 block 2:
-  kind: full
+  kind: structure
 	body:
 		IL_0006: ldc.i4.s 42
 	successors:
@@ -24,7 +24,7 @@ block 2:
   predecessors:
     block 0
 block 3:
-  kind: full
+  kind: structure
 	body:
 		IL_0008: stloc.0
 		IL_0009: br.s IL_000b
@@ -34,7 +34,7 @@ block 3:
     block 1
     block 2
 block 4:
-  kind: full
+  kind: structure
 	body:
 		IL_000b: ldloc.0
 		IL_000c: ret
