--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryCatchFinallyException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryCatchFinallyException.il.cfg
@@ -1,35 +1,31 @@
 block 0:
+  kind: structure
   body:
-    IL_0000: ldc.i4.4
-    IL_0001: stloc.0
-    IL_0002: ldc.i4.0
-    IL_0003: stloc.1
+    IL_0028: ret
+block 1:
+  kind: seh
+  body:
     IL_0004: ldloc.0
     IL_0005: ldloc.1
     IL_0006: div
     IL_0007: stloc.0
     IL_0008: leave IL_0028
   successors:
-    block 3
-block 1:
+    block 2
+block 2:
+  kind: seh
   body:
     IL_000d: stloc.2
     IL_000e: ldstr "Division by zero detected."
     IL_0013: call System.Void System.Console::WriteLine(System.String)
     IL_0018: leave IL_0028
-  successors:
-    block 3
-block 2:
+  predecessors:
+    block 1
+block 3:
+  kind: seh
   body:
     IL_001d: ldstr "finally keyword reached"
     IL_0022: call System.Void System.Console::WriteLine(System.String)
     IL_0027: endfinally
-  successors:
-    block 3
-block 3:
-  body:
-    IL_0028: ret
   predecessors:
-    block 0
-    block 1
-    block 2
+    block 3
