--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyException.il.cfg
@@ -1,29 +1,22 @@
 block 0:
+  kind: structure
   body:
-    IL_0000: ldc.i4.4
-    IL_0001: stloc.0
-    IL_0002: ldc.i4.0
-    IL_0003: stloc.1
+    IL_0018: ret
+block 1:
+  kind: seh
+  body:
     IL_0004: ldloc.0
     IL_0005: ldloc.1
     IL_0006: div
     IL_0007: stloc.0
     IL_0008: leave IL_0018
   successors:
-    block 1
     block 2
-block 1:
+block 2:
+  kind: seh
   body:
     IL_000d: ldstr "Finally..."
     IL_0012: call System.Void System.Console::WriteLine(System.String)
     IL_0017: endfinally
-  successors:
-    block 2
   predecessors:
-    block 0
-block 2:
-  body:
-    IL_0018: ret
-  predecessors:
-    block 0
     block 1
