--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TwoIfs.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TwoIfs.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: structure
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldarg.1
@@ -7,6 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: structure
 	body:
 		IL_0004: ldstr "x > y"
 		IL_0009: call System.Void System.Console::WriteLine(System.String)
@@ -15,6 +17,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: structure
 	body:
 		IL_000e: ldarg.0
 		IL_000f: ldarg.1
@@ -26,6 +29,7 @@ block 2:
     block 0
     block 1
 block 3:
+  kind: structure
 	body:
 		IL_0012: ldstr "x < y"
 		IL_0017: call System.Void System.Console::WriteLine(System.String)
@@ -34,6 +38,7 @@ block 3:
   predecessors:
     block 2
 block 4:
+  kind: structure
 	body:
 		IL_001c: ret
   predecessors:
