--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -12,22 +12,22 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="test\" />
@@ -36,6 +36,14 @@
   <ItemGroup>
     <None Include="test\TestCases\BoolAndGreaterOrEqualThan.il" />
     <None Include="test\TestCases\BoolAndGreaterOrEqualThan.il.tac" />
+    <None Include="test\TestCases\SimpleExpression1.il" />
+    <None Include="test\TestCases\SimpleExpression1.il.tac" />
+    <None Include="test\TestCases\SimpleExpression2.il" />
+    <None Include="test\TestCases\SimpleExpression2.il.tac" />
+    <None Include="test\TestCases\SimpleExpressionIfThen.il" />
+    <None Include="test\TestCases\SimpleExpressionIfThen.il.tac" />
+    <None Include="test\TestCases\SimpleExpressionIfThenElse.il" />
+    <None Include="test\TestCases\SimpleExpressionIfThenElse.il.tac" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\CFGTestFixture.cs" />
