Add local variables TAC test case. Add more simulated IL opcodes in TAC builder.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -44,6 +44,8 @@
     <None Include="test\TestCases\SimpleExpressionIfThen.il.tac" />
     <None Include="test\TestCases\SimpleExpressionIfThenElse.il" />
     <None Include="test\TestCases\SimpleExpressionIfThenElse.il.tac" />
+    <None Include="test\TestCases\LocalVariables.il" />
+    <None Include="test\TestCases\LocalVariables.il.tac" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\CFGTestFixture.cs" />
