--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/SolidOpt.Services.Multimodel.Test.csproj
@@ -42,6 +42,10 @@
       <Project>{83DD7E12-A705-4DBA-9D71-09C8973D9382}</Project>
       <Name>nunit.framework</Name>
     </ProjectReference>
+    <ProjectReference Include="SolidOpt.Services.Multimodel.csproj">
+      <Project>{02e6657d-3102-4d7e-94b5-6b38a0e34a86}</Project>
+      <Name>SolidOpt.Services.Multimodel</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
