Add more IL (branches) simulation in TAC builder. Add more TAC test cases (loops, etc).

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -12,22 +12,22 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="test\" />
@@ -46,6 +46,12 @@
     <None Include="test\TestCases\SimpleExpressionIfThenElse.il.tac" />
     <None Include="test\TestCases\LocalVariables.il" />
     <None Include="test\TestCases\LocalVariables.il.tac" />
+    <None Include="test\TestCases\SimpleWhile.il" />
+    <None Include="test\TestCases\SimpleWhile.il.tac" />
+    <None Include="test\TestCases\SimpleDoWhile.il" />
+    <None Include="test\TestCases\SimpleDoWhile.il.tac" />
+    <None Include="test\TestCases\SimpleExpressionReminder.il" />
+    <None Include="test\TestCases\SimpleExpressionReminder.il.tac" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\TACTestFixture.cs" />
