Add TAC switch support.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/SolidOpt.Services.CFGtoTAC.Test.csproj
@@ -52,6 +52,8 @@
     <None Include="test\TestCases\SimpleDoWhile.il.tac" />
     <None Include="test\TestCases\SimpleExpressionReminder.il" />
     <None Include="test\TestCases\SimpleExpressionReminder.il.tac" />
+    <None Include="test\TestCases\SimpleSwitch.il" />
+    <None Include="test\TestCases\SimpleSwitch.il.tac" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\TACTestFixture.cs" />
