Add the MultipleNestedMethodCalls to the project file.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/SolidOpt.Services.ILtoCG.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/SolidOpt.Services.ILtoCG.Test.csproj
@@ -66,5 +66,7 @@
     <None Include="test\TestCases\TwoSystemCalls.il.cg" />
     <None Include="test\TestCases\MathCalls.il" />
     <None Include="test\TestCases\MathCalls.il.cg" />
+    <None Include="test\TestCases\MultipleNestedMethodCalls.il" />
+    <None Include="test\TestCases\MultipleNestedMethodCalls.il.cg" />
   </ItemGroup>
 </Project>
